# lzscr

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  cobertura.xml  deny.toml  lcov.info  rustfmt.toml  test
.cargo/: audit.toml
.copilot-instructions/: project-context.md
.copilot-instructions/conventions/: rust-patterns.md
.copilot-instructions/phases/: phase5-record-field-spans.md
.copilot-instructions/tasks/: step7-pattern-record-field.md  step9-error-display-improvements.md
.copilot-state/: context.json  onboarding.json
.copilot-state/backup/: copilot-instructions.md.bak-2025-12-03T09-04-26-525Z
.copilot-state/elicitation-traces/: 2025-12-03T09-09-19-080Z-elicitation-request.json  2025-12-03T09-09-29-502Z-elicitation-request.json
.copilot-state/history/: 2025-12-03T09-09-40-534Z-33802cd7.json  2025-12-03T09-17-04-718Z-0a7ff3e6.json  2025-12-03T09-21-59-760Z-c1449031.json  (+2 more)
.devcontainer/: devcontainer.json  postCreate.sh
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: README.md  (+2 more)
crates/lzscr-cli/: Cargo.toml
crates/lzscr-cli/src/: main.rs
crates/lzscr-cli/tests/: cli.rs  record_field_error_cli.rs  stdlib_classification.rs  tokenize_golden.rs
crates/lzscr-types/: Cargo.toml  README.md
crates/lzscr-types/src/: builtins.rs  diagnostic.rs  error.rs  lib.rs  lib.rs.bak  scheme.rs  typeexpr.rs  types.rs  unification.rs
crates/lzscr-types/src/display/: legacy.rs  mod.rs  pretty.rs  user_pretty.rs
crates/lzscr-types/src/inference/: context.rs  expr.rs  mod.rs  pattern.rs
crates/lzscr-types/tests/: altlambda_ctor_union.rs  do_chain_bind.rs  effects.rs  mode_map_view.rs  record_field_errors.rs  type_display.rs
docs/: AGENT.md  CONTRIBUTING.md  README.md  ROADMAP.md  altlambda_union_spec.md  branch-protection.md  coding-standards.md  coreir-guide.md  ctor-bare-id-plan.md  diagnostics-improvement-plan.md  implementation-status.md  issue-48-tuple-helper.md  lzscr.md  parser-letgroup-regression.md  rca_instructions.md  refactoring-lzscr-types.md  refactoring-runtime-strategy.md  refactoring-strategy-detailed.md  static-analysis-report.md  stdlib-purity.md  stdlib-refactoring-plan.md  stdlib.md  str-char-plan.md  toolchain-redesign.md  type-defs-mu.md  type-system.md  type-tag.md
goldens/: ident_ops_numbers.golden  mode_map_prefix_dot.golden  numbers_radix_float.golden  record_field_error_cli.golden  strings_chars_comments.golden
scripts/: check-file-sizes.sh  check_stdlib_classification.py  lzscr-run-stdin.sh
stdlib/: lex.lzscr  list.lzscr  option.lzscr  prelude.lzscr  readme.md  result.lzscr
tests/: hyp_nested.lzscr  min_repro.lzscr  prelude_basic.lzscr
(+106 files in other folders)
