[workspace]
members = [
  "crates/lzscr-ast",
  "crates/lzscr-lexer",
  "crates/lzscr-parser",
  "crates/lzscr-runtime",
  "crates/lzscr-analyzer",
  "crates/lzscr-coreir",
  "crates/lzscr-cli",
  "crates/lzscr-types",
  "crates/lzscr-format",
  "crates/lzscr-preast",
  "crates/lzscr-llvmir",
  "crates/lzscr-jsonrpc",
  "crates/lzscr-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["lzscr contributors"]
rust-version = "1.75"
