[package]
name = "lzscr-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
lzscr-ast = { path = "../lzscr-ast" }
lzscr-parser = { path = "../lzscr-parser" }
lzscr-runtime = { path = "../lzscr-runtime" }
lzscr-analyzer = { path = "../lzscr-analyzer" }
lzscr-coreir = { path = "../lzscr-coreir" }
lzscr-types = { path = "../lzscr-types" }
lzscr-format = { path = "../lzscr-format" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
