[package]
name = "lzscr-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
lzscr-ast = { path = "../lzscr-ast", version = "0.1.0" }
lzscr-parser = { path = "../lzscr-parser", version = "0.1.0" }
lzscr-runtime = { path = "../lzscr-runtime", version = "0.1.0" }
lzscr-analyzer = { path = "../lzscr-analyzer", version = "0.1.0" }
lzscr-coreir = { path = "../lzscr-coreir", version = "0.1.0" }
lzscr-types = { path = "../lzscr-types", version = "0.1.0" }
lzscr-format = { path = "../lzscr-format", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
