[package]
name = "lzscr-types"
version = "0.1.0"
edition = "2021"
authors = ["lzscr contributors"]
license = "MIT"

[dependencies]
lzscr-ast = { path = "../lzscr-ast", version = "0.1.0" }
lzscr-parser = { path = "../lzscr-parser", version = "0.1.0" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
